--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -71,13 +71,13 @@ find_library( # Sets the name of the path variable.
 
 target_link_libraries( # Specifies the target library.
                        native-lib
+                       android
                        avutil
                        swresample
                        swscale
                        avcodec
                        avformat
                        avfilter
-
                        # Links the target library to the log library
                        # included in the NDK.
                        ${log-lib} )
