--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -78,6 +78,7 @@ target_link_libraries( # Specifies the target library.
                        avcodec
                        avformat
                        avfilter
+                       mediandk
                        # Links the target library to the log library
                        # included in the NDK.
                        ${log-lib} )
