--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -72,12 +72,13 @@ find_library( # Sets the name of the path variable.
 target_link_libraries( # Specifies the target library.
                        native-lib
                        android
-                       avutil
-                       swresample
-                       swscale
-                       avcodec
-                       avformat
-                       avfilter
+#                       avutil
+#                       swresample
+#                       swscale
+#                       avcodec
+#                       avformat
+#                       avfilter
+                       ijkffmpeg
                        mediandk
                        # Links the target library to the log library
                        # included in the NDK.
